global-retail-core/k8s-configuration/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api-dep
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
      - name: product-api
        image: product-api:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-dep
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: order-service:v2 # Ensure you built and loaded v3!
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: production
spec:
  selector:
    app: product-api
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: v1 # Fixed from v3 to v1
kind: Service
metadata:
  name: order-service
  namespace: production
spec:
  selector:
    app: order-service
  ports:
    - port: 3000
      targetPort: 3000
