global-retail-core/k8s-configuration/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: production
spec:
  replicas: 1 # Changed to 1 for stability in local dev (standard Mongo requires config for replicas)
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest # Corrected from 'mongodb' to official 'mongo'
        ports:
        - containerPort: 27017
        volumeMounts:      # Plural 's' added
        - name: storage
          mountPath: /data/db
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: production
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP # Corrected: String 'TCP' instead of number
  selector:
    app: mongodb
