global-retail-core/k8s-configuration/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-ingress
  namespace: production
  annotations:
    # Specifies that we are using the NGINX controller installed via Minikube/Helm
    kubernetes.io/ingress.class: nginx
    # This is a professional touch: it handles trailing slashes and path redirects
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: retail.local
    http:
      paths:
      # Route 1: Directs traffic to the Python Product API
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 5000
      # Route 2: Directs traffic to the Node.js Order Service
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 3000
